--- a/index.html
+++ b/index.html
@@ -201,6 +201,7 @@
         <a href="#fr_algeria" class="btn btn_round_outline float-right next"><i class="fa fa-angle-right" aria-hidden="true"></i></a>
         <div class="container">
           <div class="row">
+            <div class="col-sm-12 subheading"><h2>FRANCE</h2></div>
              <div class="col-sm-12 col-md-9 col-lg-5">
                <div class="text textbox">
                  <p>During the industrial revolution and after World War I, France sought out migrant workers to meet the demands of the labor market.
@@ -266,7 +267,7 @@
 
          </div> <!-- close fr_migration_waves article -->
 
-<div class="image" id="fr_gloriousthirty">
+<div class="image lyon" id="fr_gloriousthirty">
     <div class="overlay">
       <a href="#intro"><img src="images/home.png" alt="Home Button"/></a>
       <a href="#fr_algeria" class="btn btn_round_outline back float-left back"><i class="fa fa-angle-left" aria-hidden="true"></i></a>
@@ -291,10 +292,10 @@
     </div> <!-- close overlay  -->
 </div>  <!-- close fr_economy  -->
 
-<div class="image" id="fr_economy">
+<div class="image jean" id="fr_economy">
     <div class="overlay">
       <a href="#intro"><img src="images/home.png" alt="Home Button"/></a>
-      <a href="#fr_migration_waves" class="btn btn_round_outline back float-left back"><i class="fa fa-angle-left" aria-hidden="true"></i></a>
+      <a href="#fr_gloriousthirty" class="btn btn_round_outline back float-left back"><i class="fa fa-angle-left" aria-hidden="true"></i></a>
       <a href="#ger_migration_waves" class="btn btn_round_outline float-right next"><i class="fa fa-angle-right" aria-hidden="true"></i></a>
       <div class="container">
         <div class="row">
@@ -304,10 +305,10 @@
               <p>Around this time, France saw the emergence of the National Front, a far-right nationalist political party.
               </p>
               <p>
-              The party’s founder Jean Marie Le Pen capitalized on the nation’s growing discontent by correlating the rise in unemployment with the growing immigrant population.
+              Jean Marie Le Pen, the founder, capitalized on the nation’s growing discontent to fuel anti-immigrant sentiments.
               </p>
               <p>
-              The rise of anti-immigrant sentiments led to a rightward shift in immigration policy and evidently unfavorable conditions for immigrants.
+              The country has since seen a rightward shift in immigration policy and evidently unfavorable conditions for immigrants.
               </p>
 
             </div> <!-- close text  -->
@@ -327,7 +328,9 @@
       <div class="row">
          <div class="col-sm-12 col-md-9 col-lg-5">
            <div class="text textbox">
-             <p>Germany and France have similar immigration history. During the first half of the 20th century, Germany received foreign workers from neighboring countries including Poland, Czechoslovakia and Hungary to fill the unskilled labor gaps in the mining and manufacturing sectors.
+             <p>Several parallels exist between Germany's and France's immigration history.</p>
+             <p>
+             During the first half of the 20th century, Germany received foreign workers from neighboring countries including Poland, Czechoslovakia and Hungary to fill the unskilled labor gaps in the mining and manufacturing sectors.
              </p>
 
              <p>In the late 1950s, post-war labor shortages prompted the country to sign bilateral recruitment agreements to import foreign labor from Italy, Spain and Greece as well as multiple Muslim nations including Turkey, Morocco and Tunisia.
