--- a/index.html
+++ b/index.html
@@ -356,11 +356,15 @@
          <div class="col-sm-12 col-md-9 col-lg-5">
            <div class="text textbox">
 
-             <p>In the late 1950s, post-war labor shortages prompted West Germany to import foreign workers to fill labor gaps in the mining and manufacturing sectors.
+             <p> In the late 1950s, post-war labor shortages prompted West Germany to recruit temporary foreign workers to fill labor gaps in the mining and manufacturing sectors.
              </p>
 
              <p>
              The country recruited guest worker by signing bilateral recruitment agreements with Italy, Spain and Greece as well as multiple Muslim nations including Turkey, Morocco and Tunisia.
+             </p>
+
+             <p>
+             Guest workers intended to travel to West Germany, work for a few years and then return home.
              </p>
 
            </div> <!-- close text  -->
@@ -370,11 +374,11 @@
    </div> <!-- close overlay  -->
 </div> <!-- close ger_migration_waves article -->
 
-<div class="image bananas" id="ger_guest">
+<div class="image kids" id="ger_guest">
   <div class="overlay">
     <a href="#intro"><img src="images/home.png" alt="Home Button"/></a>
     <a href="#ger_migration_waves" class="btn btn_round_outline float-left back effect"><i class="fa fa-angle-left" aria-hidden="true"></i></a>
-    <a href="#ger_reunification" class="btn btn_round_outline float-right next effect"><i class="fa fa-angle-right" aria-hidden="true"></i></a>
+    <a href="#ger_unprepared" class="btn btn_round_outline float-right next effect"><i class="fa fa-angle-right" aria-hidden="true"></i></a>
     <div class="container">
       <div class="row">
          <div class="col-sm-12 col-md-9 col-lg-5">
@@ -384,31 +388,8 @@
 
              <p>By that time, Turkey had surpassed Italy as the most prominent source of immigration. According to the <a href= "https://www.migrationpolicy.org/article/germany-immigration-transition">Migration Policy Institute</a>, Turkish people accounted for 23 percent of foreigners in Germany in 1973.
              </p>
-             <p>Although they were considered guest workers, many Turks remained in Germany after the halt of foreign recruitment and had their families join them as well.
+             <p>Although they were considered guest workers, many Turks remained in Germany after the halt of foreign recruitment. Their families later joined them to permanently settle in the country.
              </p>
-           </div> <!-- close text  -->
-         </div> <!-- close col  -->
-       </div> <!-- close row  -->
-     </div> <!-- close container  -->
-   </div> <!-- close overlay  -->
-</div> <!-- close ger_guest -->
-
-<div class="image" id="ger_reunification">
-  <div class="overlay">
-    <a href="#intro"><img src="images/home.png" alt="Home Button"/></a>
-    <a href="#ger_guest" class="btn btn_round_outline float-left back effect"><i class="fa fa-angle-left" aria-hidden="true"></i></a>
-    <a href="#unemployment" class="btn btn_round_outline float-right next effect"><i class="fa fa-angle-right" aria-hidden="true"></i></a>
-    <div class="container">
-      <div class="row">
-         <div class="col-sm-12 col-md-9 col-lg-5">
-           <div class="text textbox">
-
-             <p>Starting in the late 1970s,
-             </p>
-             <p>Political turmoil in Turkey during '80s and '90s,' led Turks and ethnic Kurds to seek refuge in Germany.
-             </p>
-             <p>Among them were highly skilled individuals and political actors who had difficulty entering the labor markert because their qualifications were often unrecognized.</p>
-
            </div> <!-- close text  -->
          </div> <!-- close col  -->
        </div> <!-- close row  -->
@@ -418,19 +399,22 @@
 
 <!-- begin conditions section -->
 
-<div class="image" id="ger_right">
+<div class="image supermarket" id="ger_unprepared">
   <div class="overlay">
     <a href="#intro"><img src="images/home.png" alt="Home Button"/></a>
     <a href="#ger_guest" class="btn btn_round_outline float-left back effect"><i class="fa fa-angle-left" aria-hidden="true"></i></a>
-    <a href="#unemployment" class="btn btn_round_outline float-right next effect"><i class="fa fa-angle-right" aria-hidden="true"></i></a>
+    <a href="#ger_echo" class="btn btn_round_outline float-right next effect"><i class="fa fa-angle-right" aria-hidden="true"></i></a>
     <div class="container">
       <div class="row">
          <div class="col-sm-12 col-md-9 col-lg-5">
            <div class="text textbox">
 
-             <p>In the 1990s, the Turkish governemnt entered armed conflict with the PKK, a prominent Kurdish insurgent group. It prompted many ethnic Kurds to migrate to Germany, leading to tensions within the Turkish diaspora.
+             <p>Prior to the 20th century, Germany had not received such large wave of migrants. It considered itself a country of emigration not immigration.
              </p>
 
+             <p>
+             The West German government was not prepared to handle the influx of families. Specific policies for guest workers had not been created, and intergration programs had not been set in place.
+             </p>
 
            </div> <!-- close text  -->
          </div> <!-- close col  -->
@@ -440,24 +424,25 @@
 </div> <!-- close ger_guest -->
 <!-- begin conditions section -->
 
-<div class="image" id="unemployment">
+
+<div class="image movie" id="ger_echo">
   <div class="overlay">
     <a href="#intro"><img src="images/home.png" alt="Home Button"/></a>
-    <a href="#ger_reunification" class="btn btn_round_outline float-left back effect"><i class="fa fa-angle-left" aria-hidden="true"></i></a>
+    <a href="#ger_unprepared" class="btn btn_round_outline float-left back effect"><i class="fa fa-angle-left" aria-hidden="true"></i></a>
     <a href="#far_right" class="btn btn_round_outline float-right next effect"><i class="fa fa-angle-right" aria-hidden="true"></i></a>
     <div class="container">
       <div class="row">
          <div class="col-sm-12 col-md-9 col-lg-5">
            <div class="text textbox">
 
-             <p>Unemployment is an immigrant's biggest obstacle to integration.
+             <p>
+              Raised xenophobic sentiment and questions about the country's national identity.
              </p>
 
              <p>
-              According to <a href= "https://www.migrationpolicy.org/article/challenge-french-diversity">Brookings</a>, the unemployment rate among immigrants in France is usually twice as high as the national rate of unemployment. In 2016, the <a href= "https://data.oecd.org/migration/foreign-born-unemployment.htm#indicator-chart">Organisation for Economic Co-operation and Development</a> reported that the national unemployment rate in Germany was 3.6 while foreign-born unemployment reached 6.8 percent.
+              Questions that still echo throughout the nation today.
              </p>
 
-             <p><a href= "">See image</a>
              </p>
            </div> <!-- close text  -->
          </div> <!-- close col  -->
@@ -469,7 +454,7 @@
 <div class="image" id="far_right">
   <div class="overlay">
     <a href="#intro"><img src="images/home.png" alt="Home Button"/></a>
-    <a href="#unemployment" class="btn btn_round_outline float-left back effect"><i class="fa fa-angle-left" aria-hidden="true"></i></a>
+    <a href="#ger_echo" class="btn btn_round_outline float-left back effect"><i class="fa fa-angle-left" aria-hidden="true"></i></a>
     <a href="#" class="btn btn_round_outline float-right next effect"><i class="fa fa-angle-right" aria-hidden="true"></i></a>
     <div class="container">
       <div class="row">
