--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         <div class="row">
            <div class="col-lg-12">
              <div class="text-center">
-                <p>IDENTITY</p>
+                <p>IDENTIT</p>
                 <p>Closer Look</p>
                 <h1>European Migrant Crisis</h1>
                 <p> A visual story by Eugenia Blaubach</p>
