--- a/index.html
+++ b/index.html
@@ -283,7 +283,7 @@
     <div class="overlay">
       <a href="#intro"><img src="images/home.png" alt="Home Button"/></a>
       <a href="#fr_algeria" class="btn btn_round_outline float-left back effect"><i class="fa fa-angle-left" aria-hidden="true"></i></a>
-      <a href="#fr_economy" class="btn btn_round_outline float-right next effect"><i class="fa fa-angle-right" aria-hidden="true"></i></a>
+      <a href="#fr_lepen" class="btn btn_round_outline float-right next effect"><i class="fa fa-angle-right" aria-hidden="true"></i></a>
       <div class="container">
         <div class="row">
            <div class="col-sm-12 col-md-9 col-lg-5">
@@ -301,7 +301,7 @@
     </div> <!-- close overlay  -->
 </div>  <!-- close fr_economy  -->
 
-<div class="image jean2" id="fr_economy">
+<div class="image jean2" id="fr_lepen">
     <div class="overlay">
       <a href="#intro"><img src="images/home.png" alt="Home Button"/></a>
       <a href="#fr_gloriousthirty" class="btn btn_round_outline float-left back effect"><i class="fa fa-angle-left" aria-hidden="true"></i></a>
@@ -331,7 +331,7 @@
 <div class="image workers" id="ger_intro">
   <div class="overlay">
     <a href="#intro"><img src="images/home.png" alt="Home Button"/></a>
-    <a href="#fr_economy" class="btn btn_round_outline float-left back effect"><i class="fa fa-angle-left" aria-hidden="true"></i></a>
+    <a href="#fr_lepen" class="btn btn_round_outline float-left back effect"><i class="fa fa-angle-left" aria-hidden="true"></i></a>
     <a href="#ger_migration_waves" class="btn btn_round_outline float-right next fasteffect"><i class="fa fa-angle-right" aria-hidden="true"></i></a>
     <div class="container">
       <div class="row">
@@ -436,11 +436,11 @@
            <div class="text textbox">
 
              <p>
-              Raised xenophobic sentiment and questions about the country's national identity.
+              As questions about the country's national identity rose, so did racist, anti-muslim sentiments.
              </p>
 
              <p>
-              Questions that still echo throughout the nation today.
+              Almost 30 years later, the same questions reverberate throughout the nation.
              </p>
 
              </p>
@@ -451,34 +451,67 @@
    </div> <!-- close overlay  -->
   </div> <!-- close uk_migration_waves article -->
 
-<div class="image" id="far_right">
-  <div class="overlay">
-    <a href="#intro"><img src="images/home.png" alt="Home Button"/></a>
-    <a href="#ger_echo" class="btn btn_round_outline float-left back effect"><i class="fa fa-angle-left" aria-hidden="true"></i></a>
-    <a href="#" class="btn btn_round_outline float-right next effect"><i class="fa fa-angle-right" aria-hidden="true"></i></a>
-    <div class="container">
-      <div class="row">
-         <div class="col-sm-12 col-md-9 col-lg-5">
-           <div class="text textbox">
-             <p>Political parties in the far right have gained significant popularity in both France and Germany.
-             </p>
+  <div class="image line" id="far_right">
+    <div class="overlay">
+      <a href="#intro"><img src="images/home.png" alt="Home Button"/></a>
+      <a href="#ger_echo" class="btn btn_round_outline float-left back effect"><i class="fa fa-angle-left" aria-hidden="true"></i></a>
+      <a href="#afd" class="btn btn_round_outline float-right next effect"><i class="fa fa-angle-right" aria-hidden="true"></i></a>
+      <div class="container">
+        <div class="row">
+           <div class="col-sm-12 col-md-9 col-lg-5">
+             <div class="text textbox">
 
-             <p>Marine le Pen, the leader of the National Front, came in second place during the 2017 French presidential election.
-             </p>
+               <p> Immigrants have contributed new skills and knowledge to both German and French societies. They've strenghthened the labor force and made each nation more diverse and pluralistic.
 
-             <p>Germany’s nationalist party, Alternative for Germany, became the third largest party in the federal parliament in 2017.
-             </p>
+               <p>Yet, political parties in the far right have gained significant popularity in both France and Germany.
+               </p>
 
-             <p><a href= "">See image</a>
-             </p>
-           </div> <!-- close text  -->
-         </div> <!-- close col  -->
-       </div> <!-- close row  -->
-     </div> <!-- close container  -->
-   </div> <!-- close overlay  -->
-  </div> <!-- close far_right article -->
+             </div> <!-- close text  -->
+           </div> <!-- close col  -->
+         </div> <!-- close row  -->
+       </div> <!-- close container  -->
+     </div> <!-- close overlay  -->
+    </div> <!-- close far_right article -->
 
+    <div class="image afd" id="afd">
+      <div class="overlay">
+        <a href="#intro"><img src="images/home.png" alt="Home Button"/></a>
+        <a href="#far_right" class="btn btn_round_outline float-left back effect"><i class="fa fa-angle-left" aria-hidden="true"></i></a>
+        <a href="#lepen" class="btn btn_round_outline float-right next effect"><i class="fa fa-angle-right" aria-hidden="true"></i></a>
+        <div class="container">
+          <div class="row">
+             <div class="col-sm-12 col-md-9 col-lg-5">
+               <div class="text textbox">
 
+                 <p>Germany’s nationalist party, Alternative for Germany, became the third largest party in the federal parliament in 2017.
+                 </p>
+
+               </div> <!-- close text  -->
+             </div> <!-- close col  -->
+           </div> <!-- close row  -->
+         </div> <!-- close container  -->
+       </div> <!-- close overlay  -->
+      </div> <!-- close far_right article -->
+
+    <div class="image lepen" id="lepen">
+      <div class="overlay">
+        <a href="#intro"><img src="images/home.png" alt="Home Button"/></a>
+        <a href="#afd" class="btn btn_round_outline float-left back effect"><i class="fa fa-angle-left" aria-hidden="true"></i></a>
+        <a href="#" class="btn btn_round_outline float-right next effect"><i class="fa fa-angle-right" aria-hidden="true"></i></a>
+        <div class="container">
+          <div class="row">
+             <div class="col-sm-12 col-md-9 col-lg-5">
+               <div class="text textbox">
+
+                 <p>Marine le Pen, the daughter of Jean Marie le Pen and current leader of the National Front, came in second place during the 2017 French presidential election.
+                 </p>
+
+               </div> <!-- close text  -->
+             </div> <!-- close col  -->
+           </div> <!-- close row  -->
+         </div> <!-- close container  -->
+       </div> <!-- close overlay  -->
+      </div> <!-- close far_right article -->
 
 
 
