--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
 
                 <div class="p-2">
                   <div class="text footer">
-                    <p>Image by<a href= "https://commons.wikimedia.org/wiki/File%3AWomen_and_children_among_Syrian_refugees_striking_at_the_platform_of_Budapest_Keleti_railway_station._Refugee_crisis._Budapest%2C_Hungary%2C_Central_Europe%2C_4_September_2015._(3).jpg" target="_blank"> Mstyslav Chernov </a>
+                    <p>Image by<a href= "https://commons.wikimedia.org/wiki/File:20151030_Syrians_and_Iraq_refugees_arrive_at_Skala_Sykamias_Lesvos_Greece_2.jpg" target="_blank"> Ggia </a>
                     </p>
                   </div> <!-- close footer  -->
                 </div><!-- close p-2  -->
